# CLAUDE-ORACLE

./: .env.example  .gitignore  Dockerfile  README.md  nixpacks.toml  pyproject.toml  railway.toml
.github/workflows/: tests.yml
poly_paper/: __init__.py  arb_scanner.py  export_bundle.py  http_server.py  kelly.py  logging_setup.py  market_refresher.py  ngr.py  ngr_trainer.py  pricing.py  risk.py  runner.py  selfcorrect.py  weather_calibration.py  weather_resolver.py  weather_runner.py
poly_paper/db/: models.py  session.py
poly_paper/exec/: fees.py  live.py  models.py  paper.py  router.py
poly_paper/feeds/: btc_spot.py  open_meteo.py
poly_paper/polymarket/: rest.py
poly_paper/static/: index.html
poly_paper/strategies/: btc_updown.py  bundle_arb.py  fair_value.py  ladder_arb.py  ladder_classify.py  weather.py
poly_paper/universe/: loader.py
scripts/: run_paper.py  status.py  verify_paper.py
tests/: test_btc_updown_strategy.py  test_bundle_arb.py  test_export_bundle.py  test_fair_value.py  test_fees.py  test_ladder_arb.py  test_ladder_classify.py  test_ngr_kelly.py  test_paper.py  test_selfcorrect.py  test_weather.py
