[project]
name = "poly-paper"
version = "0.2.0"
description = "Polymarket paper + live trading platform with paper/live execution parity"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "anyio>=4.3",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "asyncpg>=0.29",
    "numpy>=1.26",
    "scipy>=1.11",
    "rich>=13.7",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["poly_paper"]

[tool.hatch.build.targets.wheel.force-include]
"poly_paper/static" = "poly_paper/static"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
